k8s/frontend/myingress3.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibanaingressresource
spec:
  rules:
    # ibmcloud ks cluster-get --cluster ai-a-thon | grep Ingress
    - host: kibana.ai-a-thon.us-south.containers.appdomain.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: kibana
              servicePort: 5601
